dev/webapp-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
 name: webapp
 namespace: dev
 labels:
   app: nginx
spec:
 replicas: 3
 selector:
   matchLabels:
     app: nginx
 template:
   metadata:
     labels:
       app: nginx
   spec:
     containers:
     - name: nginx
       image: openrc/portfolio:v1
       ports:
       - containerPort: 80
 strategy:
   type: RollingUpdate
   rollingUpdate:
     maxUnavailable: 1
