dev/webapp-service.yml
apiVersion: v1
kind: Service
metadata:
  name: webapp-service
  namespace: dev
spec:
  selector:
    app: nginx
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
