dev/webapp-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata: 
  name: webapp
  namespace: dev
spec:
  ingressClassName: nginx
  rules:
  - host: webapp.machinesarehere.in
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: webapp-service
            port: 
              number: 80
  tls:
    - hosts:
        - webapp.machinesarehere.in
      secretName: machinesarehere-tls
